# easytogokorea

./: .gitignore  README.md
.agents/workflows/: ios-test.md
.github/workflows/: ios-build.yml
UI_Prototype/: UI_DESIGN_GUIDE.md  add-place.html  ar_guide.html  chat.html  checkout.html  gesture-nav.js  group_pay.html  living.html  login.html  medical.html  menu.html  party_matching.html  planner.html  popup-event-detail.html  profile.html  realtime_chat.html  scanner.html  settings.html  smart_alert.html  social.html  styles.css  templestay.html
UI_Prototype2/: ar_guide.html  graffiti_write.html  map_zen.html  plan.html  plan_list.html  product_detail.html
UI_Prototype_coworker/desktop/: dashboard.html
api-server/: .env  .env.example  Cargo.toml
api-server/src/: config.rs  error.rs  main.rs
app/: package-lock.json  package.json
app/src/: app.css
crates/translator/: Cargo.toml
crates/translator/src/: config.rs  downloader.rs  engine.rs  engine_opus.rs  lib.rs
docs/ideas/: 00_index.md  01_vision_platform.md  02_itinerary_info.md  03_travel_tips.md  04_culture_experience.md  05_festivals_shuttle.md  06_food_payment.md  07_global_messenger_integration.md  (+16 more)
logo/: script.js  style.css
mobile/: vite.config.js
partner/: build_log.txt  package.json
server/: .env.example  Cargo.toml  tauri.conf.json
server/frontend/: package.json
server/frontend/src/: App.svelte  app.css
server/icons/: icon.icns
server/src/: main.rs
server/src/clients/: air_quality_api.rs  eligibility_api.rs  emergency_api.rs
server/src/graphql/: mutation.rs
server/src/models/: air_quality.rs  eligibility.rs  emergency.rs  exchange.rs  transport.rs
(+126 files in other folders)
