[package]
name = "easytogo-api-server"
version = "0.1.0"
edition = "2021"
description = "Korean public API integration server for EasyToGoKorea"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cache
moka = { version = "0.12", features = ["future"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
