[package]
name = "translator"
version = "0.1.0"
edition = "2021"
description = "On-device translation engine using ONNX Runtime + Opus-MT"

[dependencies]
ort = { version = "2.0.0-rc.9", features = ["download-binaries", "ndarray"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dirs = "5"
